[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -148.0
margin_right = 148.0
margin_bottom = 48.0

[node name="Save" type="Button" parent="HBoxContainer"]
margin_right = 96.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
text = "Save"

[node name="Load" type="Button" parent="HBoxContainer"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
text = "Load"

[node name="Delete" type="Button" parent="HBoxContainer"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 48.0
rect_min_size = Vector2( 96, 48 )
text = "Delete file"

[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
